Fix: top nav alignment

--- a/css/main.css
+++ b/css/main.css
@@ -400,6 +400,7 @@ hr {
   -webkit-box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05) !important;
           box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05) !important;
   min-height: 61px;
+  padding: 0 8px;
 }
 
 .nav-brand {
